[gd_scene load_steps=2 format=3 uid="uid://d2rbuwid6quhm"]

[ext_resource type="Script" uid="uid://se55ly7xnx44" path="res://scripts/ui/LoadingScreen.gd" id="1_ghsbh"]

[node name="LoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ghsbh")

[node name="BackgroundArt" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 3

[node name="OverlayDim" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="TitleLabel" type="Label" parent="Content"]
layout_mode = 2
text = "Načítání..."

[node name="ProgressBar" type="TextureProgressBar" parent="Content"]
layout_mode = 2
nine_patch_stretch = true

[node name="TipLabel" type="Label" parent="Content"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 3
